# gen-ai-photoshoots

./: .dockerignore  .gitignore  Dockerfile  README.md  gen_ai_photoshoots.ipynb  pyproject.toml
.github/workflow/: main.yml
.github/workflows/: main.yml
gen_ai_photoshoots/: __init__.py  app.py  download_model.py  download_models.py  gemini_api.py  generate_image.py  images_generate.py  main.py  model_training.py  train_model.py
junit/: test-results.xml
tests/: test_main.py  test_train_model.py
